# psychic-octo-guacamole

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: app.js  styles.css
examples/: demo_anova.csv  demo_ihw.csv  demo_pvalues.csv
export/: board.md
src/mc_cc0/: __init__.py  anova_posthoc.py  cli.py  corrections.py  decision_flow.py  ssm_guardrail.py
tests/: test_cli_bh_plot.py  test_cli_ihw_example.py
web/: index.html
